RESOLVED FIXED292722
[iOS] sciencedirect.com login page input field has unexpected rounded bottom border
https://bugs.webkit.org/show_bug.cgi?id=292722
Summary [iOS] sciencedirect.com login page input field has unexpected rounded bottom ...
Aditya Keerthi
Reported 2025-05-08 08:10:01 PDT
Attachments
Aditya Keerthi
Comment 1 2025-05-08 10:52:31 PDT
EWS
Comment 2 2025-05-13 08:04:35 PDT
Committed 294843@main (d18d3ce1ba1a): <https://commits.webkit.org/294843@main> Reviewed commits have been landed. Closing PR #45117 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.